--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,4 +29,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        default_batch_fetch_size: 10 # lazy 하게 땡길 때 셀랙트 여러번 안 하고 인쿼리를 만들어줌
     defer-datasource-initialization: true
+
